--- a/index.scss
+++ b/index.scss
@@ -800,9 +800,8 @@ body {
   border-color: #8b6914;
 }
 
-.library-key[title*="SHIFT"], .library-key[title*="CTRL"], 
-.library-key[title*="ALT"], .library-key[title*="GUI"],
-.library-key[title*="CMD"], .library-key[title*="WIN"] {
+.library-key[title*="Shift"], .library-key[title*="Ctrl"], 
+.library-key[title*="Alt"], .library-key[title*="GUI"] {
   background: #3d2d4a;
   border-color: #6b1488;
 }
